# CUT

./: CMakeLists.txt  Dockerfile  README.md  main.c
include/: buffer.h  cpu_data.h  log_data.h  threads.h
src/: buffer.c  cpu_data.c  threads.c
tests/: CMakeLists.txt  buffer_tests.cpp
